--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.3.2
 codespell==2.2.6
 distlib==0.3.8
 Django==5.0.4
+djangorestframework==3.15.1
 filelock==3.13.4
 flake8==7.0.0
 identify==2.5.35
